# joycon2mouse

./: .gitignore  Info.plist  README.md  build.sh  create_icons_script.sh  duo.py  duo_logic.py  gc_logic.py  joycon.py  main.py  mouse.py  player.py  pro_logic.py  procon2.py  procon2commandtest.py  pyproject.toml  pystraytest.py  requirements.txt  setup.py  solo.py  solo_logic.py  soloother.py  solowindows.py  user_preferences.py  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md
