[project]
name = "joycon2mouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleak>=1.0.1",
    "fastapi>=0.116.1",
    "pillow>=11.3.0",
    "py2app>=0.28.8",
    "pyautogui>=0.9.54",
    "pyinstaller>=6.14.2",
    "pystray>=0.19.5",
    "rumps>=0.4.0",
    "setuptools==70.3.0",
    "uvicorn>=0.35.0",
]
